; ModuleID = '/home/carl/AnghaBench/lede/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_esw_rt3050.c_esw_rmw_raw.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_esw_rt3050.c_esw_rmw_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt305x_esw = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rt305x_esw*, i32, i64, i64)* @esw_rmw_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @esw_rmw_raw(%struct.rt305x_esw* %0, i32 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.rt305x_esw*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.rt305x_esw* %0, %struct.rt305x_esw** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load %struct.rt305x_esw*, %struct.rt305x_esw** %5, align 8
  %11 = getelementptr inbounds %struct.rt305x_esw, %struct.rt305x_esw* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %6, align 4
  %14 = add i32 %12, %13
  %15 = call i64 @__raw_readl(i32 %14)
  %16 = load i64, i64* %7, align 8
  %17 = xor i64 %16, -1
  %18 = and i64 %15, %17
  store i64 %18, i64* %9, align 8
  %19 = load i64, i64* %9, align 8
  %20 = load i64, i64* %8, align 8
  %21 = or i64 %19, %20
  %22 = load %struct.rt305x_esw*, %struct.rt305x_esw** %5, align 8
  %23 = getelementptr inbounds %struct.rt305x_esw, %struct.rt305x_esw* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %6, align 4
  %26 = add i32 %24, %25
  %27 = call i32 @__raw_writel(i64 %21, i32 %26)
  ret void
}

declare dso_local i64 @__raw_readl(i32) #1

declare dso_local i32 @__raw_writel(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
